--- a/04/app.css
+++ b/04/app.css
@@ -1,15 +1,17 @@
 .wrap {
-
     width: 200px; 
+    height: 200px;
+    margin: 0 auto; /*가운데 정렬*/
+    border: 3px solid #ddd;
   }
   .wrap > div{
     width: 50px;
     height: 50px;
     float: left;
   }
-  .wrap .b {
+  .wrap .black {
     background-color: #000;
   }
-  .wrap .w {
+  .wrap .white {
     background-color: white;
   }
