--- a/test/app.css
+++ b/test/app.css
@@ -1,6 +1,3 @@
-body {
-    
-}
 .container h1 {
     display: block;
     overflow: hidden;
@@ -23,7 +20,7 @@ ul.nav {
     border-left: 1px solid #eee;
     width: 100%;
     font-size:15px;
-    /* hover넣기 */
+ 
 }
 ul.nav li {
     float: left;
@@ -36,7 +33,7 @@ ul.nav li {
     border-left: none;
     background: #fafafa;
     overflow: hidden;
-    position: relative; 
+    position: relative;    /* hover넣기 */
 }
  .nav a{ text-decoration:none; color:#000; }  
 
@@ -51,7 +48,7 @@ a:link {
     padding:10px;
 }
 
-.glyphicon{
+.loding{
     display:none;
 }
 
